fix(hero): place hero under sticky header to make glass transparency visible

--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -10,6 +10,7 @@
 
 .heroSection {
 	margin-inline: calc(50% - 50vw);
+	margin-top: -4.4rem;
 }
 
 .heroFrame {
@@ -23,7 +24,7 @@
 
 .heroViewport {
 	position: relative;
-	min-height: calc(100svh - 4.4rem);
+	min-height: 100svh;
 }
 
 .heroImage {
@@ -89,8 +90,8 @@
 }
 
 @media (min-width: 640px) {
-	.heroViewport {
-		min-height: calc(100svh - 4.6rem);
+	.heroSection {
+		margin-top: -4.6rem;
 	}
 
 	.heroCaption {
@@ -103,8 +104,8 @@
 }
 
 @media (min-width: 1024px) {
-	.heroViewport {
-		min-height: calc(100svh - 10.2rem);
+	.heroSection {
+		margin-top: -10.2rem;
 	}
 
 	.heroCaption {
